--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "IndoorNavigator",
     "slug": "IndoorNavigator",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "indoornavigator",
     "userInterfaceStyle": "automatic",
@@ -19,7 +19,10 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "HIGH_SAMPLING_RATE_SENSORS"
+      ]
     },
     "web": {
       "output": "static",
@@ -37,6 +40,12 @@
           "dark": {
             "backgroundColor": "#000000"
           }
+        }
+      ],
+      [
+        "expo-sensors",
+        {
+          "motionPermission": "Allow IndoorNavigator to access your device motion"
         }
       ]
     ],
