--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "edgeToEdgeEnabled": true,
       "permissions": [
         "HIGH_SAMPLING_RATE_SENSORS"
-      ]
+      ],
+      "package": "com.kovalevaroslav861.indoornavigator"
     },
     "web": {
       "bundler": "metro",
@@ -51,6 +52,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "a1b71568-3e6e-45de-967a-c50598a1cb9c"
+      }
+    },
+    "owner": "kovalevaroslav861"
   }
 }
