--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start --host tunnel",
+    "dev": "expo start",
     "build": "expo build:android",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
@@ -14,17 +15,20 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "expo": "^54.0.6",
+    "@reduxjs/toolkit": "^2.10.1",
+    "expo": "^54.0.25",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
-    "expo-dev-client": "^6.0.17",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
+    "expo-module-scripts": "^5.0.7",
     "expo-router": "~6.0.3",
     "expo-sensors": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -43,7 +47,9 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
